--- a/src/components/BannerLogin.module.css
+++ b/src/components/BannerLogin.module.css
@@ -39,14 +39,45 @@
     border: 1px solid #d6d6d6;
 }
 
+.circle_icon__darkMode {
+    width: 48px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #FFFFFF;
+    border-radius: 100%;
+    cursor: pointer;
+    background-color: #FFFFFF;
+}
+
+.circle_icon__darkMode:hover {
+    border: 1px solid #d6d6d6;
+    background-color: #d6d6d6;
+}
+
 .icon {
     color: #FFFFFF;
+}
+
+.icon__darkMode {
+    color: #020A09;
 }
 
 .circle_icon:hover .icon {
     color: #d6d6d6;
 }
 
+.circle_icon__darkMode:hover .icon__darkMode {
+    color: #000000;
+}
+
 .footer {
     margin-bottom: 80px;
+}
+
+@media (max-width: 1200px) {
+    .bannerLogin_main {
+        display: none;
+    } 
 }
