--- a/src/components/FormLogin.module.css
+++ b/src/components/FormLogin.module.css
@@ -1,5 +1,6 @@
 .formLogin_main {
     width: 35%;
+    height: 100%;
 }
 
 .main_container {
@@ -30,7 +31,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 48px;
+    margin-bottom: 4.5vh;
 }
 
 .welcome_title {
@@ -59,7 +60,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 48px;
+    margin-bottom: 4.5vh;
 }
 
 .icon_container {
@@ -82,11 +83,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 48px;
+    margin-bottom: 4.5vh;
 }
 
 .divider {
     width: 40%;
+    height: 1px;
+    color: #0000001a;
+    background-color: #0000001a;
+    margin: 0;
+}
+
+.divider_header {
+    width: 100%;
     height: 1px;
     color: #0000001a;
     background-color: #0000001a;
@@ -106,6 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 4.5vh;
 }
 
 .forget_password_text {
@@ -120,4 +130,62 @@
     color: #0761E2;
     margin-left: 4px;
     cursor: pointer;
+}
+
+.header_mobile {
+    width: 100%;
+    height: 96px;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.circle_icon_prev {
+    width: 48px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #000000;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.text_create_account {
+    font-family: "Inter", sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25.2px;
+}
+
+@media (max-width: 1930px) {
+    .icon_container {
+        width: 20%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .formLogin_main {
+        width: 50%;
+    }
+
+    .btn_create_account {
+        display: none;
+    }
+
+    .header_mobile {
+        display: flex;
+    }
+}
+
+@media (max-width: 820px) {
+    .formLogin_main {
+        width: 75%;
+    }
+}
+
+@media (max-width: 550px) {
+    .formLogin_main {
+        width: 90%;
+    }
 }
